apps/base/no-deposit/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: no-deposit-celery-worker
  namespace: no-deposit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: no-deposit-celery-worker
  template:
    metadata:
      labels:
        app: no-deposit-celery-worker
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: celery-worker
          image: ghcr.io/alexbenisch/no-deposit:latest # {"$imagepolicy": "flux-system:no-deposit"}
          command: ["celery", "-A", "no_deposit", "worker", "--loglevel=info", "--concurrency=2"]
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
